# zk-mini

./: Cargo.toml  README.md
src/: circuit.rs  field.rs  main.rs  merkle.rs  proof.rs  qap.rs  r1cs.rs
