[package]
name = "zk-mini"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
num-traits = "0.2.19"
rand = "0.8"
num-integer = "0.1.46"
sha2 = "0.10"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = "1.0.0"